# predictive-maintenance

./: .gitignore.txt  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
FailurePrediction/ConstantRotationalSpeed/: .gitignore  .gitignore.txt
FailurePrediction/ExamplesEMD/: pyhht_EMD_example_var.ipynb  pyhht_example_CWRU.ipynb
FailurePrediction/VariableRotationalSpeed/: .gitignore  Select_train_test.ipynb  pairplot_statistics.ipynb  signals1s_train_test.ipynb  signals_10s_visualization.ipynb  signals_test.mat.REMOVED.git-id  signals_train.mat.REMOVED.git-id  statistics_10_hamming.csv  statistics_10_test.csv  statistics_10_train.csv  statistics_hamming.py  statistics_pairplot
TimeToFailurePrediction/: .gitignore
TimeToFailurePrediction/AnomalyDetectionAutoencoders/: AnomalyDetection_autoencoders_Ch1_test2.ipynb  AnomalyDetection_autoencoders_Ch3_test3.ipynb  AnomalyDetection_autoencoders_Ch5_test1.ipynb  AnomalyDetection_autoencoders_Ch6_test1.ipynb
TimeToFailurePrediction/AnomalyDetectionOCSVM/: OneClassSVM_Ch1_test2.ipynb  OneClassSVM_Ch3_test3.ipynb  OneClassSVM_Ch5_test1.ipynb  OneClassSVM_Ch6_test1.ipynb
TimeToFailurePrediction/AnomalyDetectionPCA/: AnomalyDetectionPCAs_Ch1_test2.ipynb  AnomalyDetectionPCAs_Ch3_test3.ipynb  AnomalyDetectionPCAs_Ch5_test1.ipynb  AnomalyDetectionPCAs_Ch6_test1.ipynb  PCAs_errorReconstruccion_primerCuarto.py  estadisticos_test1_ch6.csv
TimeToFailurePrediction/DataStatistics/: estadisticos_test1_ch5.csv  estadisticos_test2_ch1.csv  estadisticos_test3_ch3.csv
(+47 files in other folders)
