[tool.poetry]
name = "predictive-maintenance"
version = "0.1.0."
description = "Development and implementation of different techniques for predictive maintenance."
authors = ["Judith Sáinz-Pardo <jspardo@cic.es>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
sklearn = "^0.0"
keras = "^2.4.3"
hyperopt = "^0.2.5"
lightgbm = "^3.2.1"
pyhht = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
